# rules_cuda

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: build-tests.yaml
cuda/: BUILD.bazel  extensions.bzl  repositories.bzl
cuda/extensions/: cuda.bzl  toolchains.bzl
cuda/private/: cuda_helper.bzl  os_helpers.bzl  repositories.bzl  toolchain.bzl
cuda/private/actions/: compile.bzl  dlink.bzl
cuda/private/rules/: cuda_library.bzl
cuda/runtime/: BUILD.remote_cuda
cuda/templates/: BUILD.remote_nvcc  BUILD.remote_toolchain_nvcc
examples/: .bazelrc  MODULE.bazel  WORKSPACE.bazel
