module(
    name = "rules_cuda",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.2.1")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_cc", version = "0.0.2")

ext = use_extension("//cuda:extensions.bzl", "ext")
use_repo(ext, "local_cuda")

register_toolchains(
    "@local_cuda//toolchain:nvcc-local-toolchain",
    "@local_cuda//toolchain/clang:clang-local-toolchain",
)
