module(
    name = "rules_cuda",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.6")

toolchain = use_extension("@rules_cuda//cuda:extensions/cuda.bzl", "toolchain")
use_repo(toolchain, "cuda_toolchains")

toolchains = use_extension("@rules_cuda//cuda:extensions/toolchains.bzl", "toolchains")

