module(
    name = "rules_cuda",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "cub", version = "1.17.2")
bazel_dep(name = "thrust", version = "1.17.2")
bazel_dep(name = "libcudacxx", version = "1.9.0")

toolchain = use_extension("@rules_cuda//cuda:extensions/cuda.bzl", "toolchain")
use_repo(toolchain, "cuda_toolchains", "remote_cuda_toolchain")

toolchains = use_extension("@rules_cuda//cuda:extensions/toolchains.bzl", "toolchains")

register_toolchains("@cuda_toolchains//:all")

