workspace(name = "rules_cuda")

local_repository(
    name = "rules_cuda_examples",
    path = "examples",
)

load("//cuda:repositories.bzl", "register_cuda_toolchains", "register_detected_cuda_toolchains", "rules_cuda_dependencies")

rules_cuda_dependencies()

register_cuda_toolchains()

register_detected_cuda_toolchains()

load("@remote_cuda_toolchain//:repositories.bzl", "cuda_remote_repos")

cuda_remote_repos()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()
